syntax = "proto3";

// Doc: https://developers.google.com/protocol-buffers/docs/proto3

package com.bdps.coverage_crowd_of_item;

option java_package = "com.bdps.coverage_crowd_of_item  ";
option java_outer_classname = "CoverageCrowdOfItemProto";
// option java_multiple_files = true; 这个会将类分开，避免跟model重名可以不分开，如果太大可以考虑分开
//option objc_class_prefix = "SAMPLE";

message CoverageCrowdOfItem {
    int32 coverageCrowdOfItemId = 1;
    int32 specialServiceDetailId = 2;
    int32 coverageCrowdId = 3;
}


message CoverageCrowdOfItems {
    int32 page = 1;
    int32 limit = 2;
    int32 count = 3;
    repeated CoverageCrowdOfItem nodes = 4;
}


message AddCoverageCrowdOfItemRequest {
    int32 specialServiceDetailId = 2;
    int32 coverageCrowdId = 3;
}


message ListCoverageCrowdOfItemRequest {
    int32 page = 1;
    int32 limit = 2;
}
message GetCoverageCrowdOfItemRequest {
    int32 coverageCrowdOfItemId = 1;
}

message UpdateCoverageCrowdOfItemRequest {
    int32 coverageCrowdOfItemId = 1;
    int32 specialServiceDetailId = 2;
    int32 coverageCrowdId = 3;
}

message DeleteCoverageCrowdOfItemRequest {
    int32 coverageCrowdOfItemId = 1;
}
service CoverageCrowdOfItemService {
    rpc AddCoverageCrowdOfItem (AddCoverageCrowdOfItemRequest) returns (CoverageCrowdOfItem) {
    }
    rpc ListCoverageCrowdOfItem (ListCoverageCrowdOfItemRequest) returns (CoverageCrowdOfItems) {
    }
    rpc GetCoverageCrowdOfItem (GetCoverageCrowdOfItemRequest) returns (CoverageCrowdOfItem) {
    }
    rpc UpdateCoverageCrowdOfItem (UpdateCoverageCrowdOfItemRequest) returns (CoverageCrowdOfItem) {
    }
    rpc DeleteCoverageCrowdOfItem (DeleteCoverageCrowdOfItemRequest) returns (CoverageCrowdOfItem) {

    }
}
